# pixel-perfect

./: .env.example  .gitignore  .mcp.json  AGENTS.md  README.md  layout.tsx  nextjs-analysis-report.md  page.tsx  prompts-lock.json  prompts.json  pyproject.toml  requirements.txt
app/: __init__.py  cli_config.py  config.py  main.py  prompts.py  schemas.py  team.py  tools.py
app/agents/: __init__.py  analyzer.py  architect.py  developer.py
prompts/: pixel_perfect_migration.yaml
tests/evaluations/: example_eval.ipynb
tests/fixtures/next_app/components/: Button.js
tests/fixtures/next_app/pages/: index.js
tests/fixtures/simple_next_app/: package.json
tests/fixtures/simple_next_app/pages/: index.js
tests/scenarios/: test_migration.py
